solved: flex-basis/max-width, text-align:center

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,23 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  /* border: 5px solid black;
+  display: flex;
+  flex-direction: column;
+  align-items: center; */
+  text-align: center;
+}
+
+.info{
+  /* border: 5px solid black; */
+  display: flex;
+  justify-content: center;
+  /* padding-top: 32px; */
+  margin-top: 32px;
+  gap: 52px;
+}
+.items{
+  flex-basis: 200px;
+  /* max-width: 200px; */
 }
 
 img {
